src/main/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: minha-aplicacao-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: minha-aplicacao
